--- a/style.css
+++ b/style.css
@@ -3,9 +3,11 @@
     width:530px;
     overflow: hidden;
     border:none;
+    background:transparent;
 }
 iframe.cat-1 html, iframe.cat-2 html{
     overflow:hidden;
+    background:transparent;
 
 }
 
